ToBeReviewedCheckerService, make use of Merriam-Webster dictionary API. (#274)
* ToBeReviewedChecckerService, make use of Merriam-Webster dictionary API.

* Removed two tests from ToBeReviewedCheckerServiceImplTest because they referred to bugs in Words API which we no longer use.

* Polished up the ToBeReviewedCheckerServiceImplTest, separated the checkPartOfSpeech() tests into another file.

* Removed updateTables() method, as it was only used in one place, and the test for it wasn't doing anything useful. Moved it to the place it was used. Some other minor renaming, too.

* Jacoco now generates coverage during both test and verify targets.

* Corrected the path used to test StorageServiceImpl

* Removed Words API error handling, since we're not using Words API anymore.

* Minor, corrected package name

* uncommented out argLine element in maven-surefire-plugin config

* jacoco runs on the verify phase so IT tests are included in the coverage report

* Simplified the argLine param for maven-surefire. Tests run in the command line and in intellij now.